Use table writing mode for borderAfter() in collapsed border resolution https://bugs.webkit.org/show_bug.cgi?id=311048 rdar://problem/173655092

Reviewed by Oriol Brufau.

In computeCollapsedBeforeBorder and computeCollapsedAfterBorder, four
calls to borderAfter() used the element's own writing mode instead of
tableWritingMode(). Meanwhile, the border color property was resolved
using tableWritingMode(). When a cell has a different writing mode
than its table (e.g. vertical-rl in a horizontal-tb table), this
created a CollapsedBorderValue with width/style from one physical
edge and color from another, causing the wrong color to appear.

All other borderBefore()/borderAfter() calls in these functions
already correctly pass tableWritingMode().

Test: css/css-tables/collapsed-border-writing-mode-color.html

* LayoutTests/imported/w3c/web-platform-tests/css/css-tables/collapsed-border-writing-mode-color-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-tables/collapsed-border-writing-mode-color.html: Added.
* Source/WebCore/rendering/RenderTableCell.cpp:
(WebCore::RenderTableCell::computeCollapsedBeforeBorder):
(WebCore::RenderTableCell::computeCollapsedAfterBorder):

Canonical link: https://commits.webkit.org/310303@main